[gd_scene load_steps=9 format=4 uid="uid://bj3dami5ftsyd"]

[ext_resource type="Script" uid="uid://chlb7ggwbhk1r" path="res://instances/door.gd" id="1_vkyci"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_l51ke"]
resource_name = "glass"
transparency = 4
cull_mode = 2
albedo_color = Color(0.0448822, 0.18354, 0.111227, 0.135688)
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s2ip1"]
resource_name = "shiny_metal"
cull_mode = 2
albedo_color = Color(0.449356, 0.449356, 0.449356, 1)
metallic = 1.0
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_et45k"]
_surfaces = [{
"aabb": AABB(-0.00591755, 0.212409, -1.65567, 0.0118365, 3.95018, 3.31133),
"format": 34359742465,
"index_count": 24,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0A"),
"name": "glass",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray("AOjBu/KmE0Dq7NM/AOjBu/EzhUDo7NO/AOjBu/KmE0Do7NO/AOjBu/EzhUDq7NM/APTBO/KmE0Do7NO/APTBO/EzhUDq7NM/APTBO/KmE0Dq7NM/APTBO/EzhUDo7NO/AOjBu+CBWT7q7NM/AOjBuw5ZBEDo7NO/AOjBu+CBWT7o7NO/AOjBuw5ZBEDq7NM/APTBO+CBWT7o7NO/APTBOw5ZBEDq7NM/APTBO+CBWT7q7NM/APTBOw5ZBEDo7NO/")
}, {
"aabb": AABB(-0.040369, 0, -1.8625, 0.0807381, 4.375, 3.725),
"format": 34359742465,
"index_count": 372,
"index_data": PackedByteArray("FgAXABgAGAAXABkAGAAZAAgAFwAaABkAGwAYAAgAGQAcAAgAGwAIABwAHQAZABoAHAAZAB0AGAAbAB4AGAAeABYAHAACABsACgAeABsACgAbAAIAHwAWAB4AHgAKABUAHgAVAB8AHAAgAAIAHAAdACAAHwAhABYAIAABAAIAIAAdACIAIAAjAAEAIAAiACMAIwAiAA4AIwAOAAAAIgAkAA4AAAAOACQAIwAAACUAAAAkACUAIwAlAAEAHQAFACIAIgAFACQAJQAkACYAJgAkAAUAJQAmACcAJwABACUAJwAmACgAJwAHAAEABQABAAcAJgAFAAkACQAoACYABAABAAUAHQAEAAUABQAHAAkAGgAEAB0ABAACAAEAGgApAAQABgACAAQABgAEACkAFwApABoABgAKAAIACQAHAAoACQAKAAYACgAHAAsABgAMAAkACQAMACgAKQAXACoAFgAqABcABgApACsAKQAqACsAIQAqABYAKwAPAAYABgAPAAwALAArACoAIQAsACoALAAtACsAKwAtAA8ALgAsACEALQAsAC8ALgAvACwAMAAvAC4AIQAxAC4AIQAfADEAEAAwAC4AEAAuADEAMAAyAC8AEAAyADAALQAvADMAMgAzAC8AEwAtADMAEwAPAC0AMgA0ADMAMwA0ADUAMgA1ADQAEAA1ADIAMwA1ABMANQAQADYAMQA2ABAAMQAUADYAFAAxAB8ANwA1ADYAFAA3ADYANwA4ADUAEwA1ADgAFAAfABUAEwAUABUAEwAVAA8ADwAVAAsACgALABUAEgAUABMAEwA4ABIAFAARADcAEgARABQAAwA4ADcAEQADADcAEgA4AA0AAwANADgAEQA5AAMAOQANAAMAOQARAAsAEgANADoAOQA6AA0ADAARABIADAALABEAOgAMABIADwALAAwAOgAoAAwAOQALADsAOwA6ADkAOwAoADoABwA7AAsAJwAoADsABwAnADsA"),
"lods": [0.264812, PackedByteArray("AAABAAIAAwABAAAABAACAAEABAABAAUABgACAAQAAwAHAAEABQABAAcAAAACAAgACAAEAAUABgAEAAgABQAHAAkABgAKAAIACgAIAAIACQAKAAYACQAHAAoACgAHAAsABwADAAsABgAMAAkADQAFAAkACQAMAA0AAAANAAMADgAFAA0AAAAOAA0ACAAFAA4AAAAIAA4ABgAPAAwACAAPAAYADwALAAwAAwANABAAAwARAAsAEQADABAADAALABEADQAMABIADAARABIAEAANABMAEwANABIAEwAIABAAEwAPAAgAFAARABAAEgARABQACAAUABAAEgAUABMAFAAIABUAEwAUABUAEwAVAA8ADwAVAAsACAAKABUACgALABUA")],
"name": "shiny_metal",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 60,
"vertex_data": PackedByteArray("AFolPQAAAABoZu4/AFolPdiBWT7q7NM/AFolPdiBWT7o7NO/AFolPQAAjEBoZu4/AFolvdiBWT7o7NO/AFolvdiBWT7q7NM/AFolvQ5ZBEDo7NO/AFolPQ5ZBEDq7NM/APjpPAAAAABmZu6/AFolvQ5ZBEDq7NM/AFolPQ5ZBEDo7NO/AFolPfKmE0Dq7NM/AFolvfKmE0Dq7NM/AFolvQAAjEBoZu4/AFolvQAAAABoZu4/AFolvfKmE0Do7NO/AFolPQAAjEB04+y/AFolPfEzhUDq7NM/AFolvfEzhUDq7NM/AFolvfEzhUDo7NO/AFolPfEzhUDo7NO/AFolPfKmE0Do7NO/APjpPA5ZBEBmZu6/APjpvNiBWT5mZu6/APjpPNiBWT5mZu6/APjpvAAAAABmZu6/AFolvQAAAAB04+y/AFolPdiBWT504+y/AFolPQAAAAB04+y/AFolvQAAAADo7NO/AFolPQ5ZBEB04+y/AFolPfKmE0B04+y/AFolPQAAAADo7NO/APjpPPKmE0BmZu6/AFolvQAAAADq7NM/AFolPQAAAADq7NM/AFolvdiBWT5oZu4/AFolPdiBWT5oZu4/AFolvQ5ZBEBoZu4/AFolPQ5ZBEBoZu4/AFolvfKmE0BoZu4/AFolvdiBWT504+y/APjpvA5ZBEBmZu6/AFolvQ5ZBEB04+y/APjpvPKmE0BmZu6/AFolvfKmE0B04+y/APjpPPEzhUBmZu6/APjpvPEzhUBmZu6/APjpPAAAjEBmZu6/AFolPfEzhUB04+y/APjpvAAAjEBmZu6/AFolvfEzhUB04+y/AFolvQAAjEB04+y/AFolvQAAjEDo7NO/AFolPQAAjEDo7NO/AFolPQAAjEDq7NM/AFolvQAAjEDq7NM/AFolPfEzhUBoZu4/AFolvfEzhUBoZu4/AFolPfKmE0BoZu4/")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_pm04c"]
resource_name = "supermarket_models_Plane_017"
_surfaces = [{
"aabb": AABB(-0.00591755, 0.212409, -1.65567, 0.0118365, 3.95018, 3.31133),
"attribute_data": PackedByteArray("AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8="),
"format": 34359742487,
"index_count": 24,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0A"),
"material": SubResource("StandardMaterial3D_l51ke"),
"name": "glass",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray("AOjBu/KmE0Dq7NM/AOjBu/EzhUDo7NO/AOjBu/KmE0Do7NO/AOjBu/EzhUDq7NM/APTBO/KmE0Do7NO/APTBO/EzhUDq7NM/APTBO/KmE0Dq7NM/APTBO/EzhUDo7NO/AOjBu+CBWT7q7NM/AOjBuw5ZBEDo7NO/AOjBu+CBWT7o7NO/AOjBuw5ZBEDq7NM/APTBO+CBWT7o7NO/APTBOw5ZBEDq7NM/APTBO+CBWT7q7NM/APTBOw5ZBEDo7NO/////f////7////9/////v////3////+/////f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////v////3////+/////f////7////9/////v////3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78=")
}, {
"aabb": AABB(-0.040369, 0, -1.8625, 0.0807381, 4.375, 3.725),
"attribute_data": PackedByteArray("AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8="),
"format": 34359742487,
"index_count": 372,
"index_data": PackedByteArray("QABBAEIAQgBBAEMAQgBDAAQAQABEAEEARQBEAEAARQBGAEQARwBGAEUARwBIAEYASQBIAEcASQBKAEgASwBMAAEASwAAAEwATQABAEwATgBLAAEATQAFAAEATgABAAIATwBOAAIATwACAFAABQBNAFEABwBQAAIABwBSAFAABQBRAAYABwAFAAYAUwAGAFEAUgAHAAkABwAGAAkAUgAJAFQAUwAIAAYACABTAAMACAADAFUACwBUAAkACwAIAFUACwBWAFQACwBVAFcAVgALAFcAVgBXAFgAFgAXABgAFgAZABcAGgAbABwAGgAdABsAWQAQABEAWQBaABAAEQBbAFkADAAQAFoADABaAFwAEQAQAA8AEQATAFsAXQBbABMAXQATAF4AEQAPABIAXgATABQAXgAUAF8AXwAUAGAAXwBgABUAYQBgABQAYQAUABIAEgBiAGEAEgAPAGIAYwBiAA8AYwAPAA4ADgANAGMADgBkAA0ADABkAA4ADABlAGQAXABlAAwAXABmAGUAHgAfACAAHgAhAB8AIgAjACQAIgAlACMAJgBnAGgAJgAnAGcAaABnAGkAaABpAGoAaQAoAGoAKABpAGsAawBpAGwAKABrAG0AbgBvAHAAcABvAHEAbgByAG8AKQByAG4AKQAsAHIAcABxAHMAcwBxAHQAcwB0AHUAdQB0ACoAdQAqACsAdgAvAC0AdgB3AC8AeAB3AHYAeAB5AHcAegB5AHgAegB7AHkAeQB7AHwAewB6AC4AMAAxADIAMAAzADEANAA1ADYANAA3ADUAOAA5ADoAOAA7ADkAPAA9AD4APAA/AD0AfQB+AH8AgAB/AH4AfQCBAH4AgACCAH8AggCAAIMAggCDAIQAgQB9AIUAgQCFAIYACgCGAIUACgCHAIYAiACJAIoAiwCKAIkAiACMAIkAiwCNAIoAjQCLAI4AjQCOAI8AjACIAJAAjACQAJEAkgCRAJAAkgCTAJEA"),
"lods": [0.264812, PackedByteArray("AAABAAIAAwABAAAAAAACAAQAAwAFAAEABQADAAYABwAFAAYABwAEAAIAAwAIAAYABwAGAAkABAAHAAkACAADAAoACwAIAAoACwAEAAkABAALAAoADAAEAAoACgANAAwADAANAA4ADQAPAA4ADAAQAAQAEQAQAA8ABAAQABEAEQAPABIAEgAPAA0AEQATAAQADQAUABIABAATABQAFQAUAA0ABAAUABUAFgAXABgAFgAZABcAGgAbABwAGgAdABsAHgAfACAAHgAhAB8AIgAjACQAIgAlACMAJgAnACgAKQAqACsAKQAsACoALQAuAC8AMAAxADIAMAAzADEANAA1ADYANAA3ADUAOAA5ADoAOAA7ADkAPAA9AD4APAA/AD0A")],
"material": SubResource("StandardMaterial3D_s2ip1"),
"name": "shiny_metal",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 148,
"vertex_data": PackedByteArray("AFolPQAAAABoZu4/AFolPdiBWT7q7NM/AFolPdiBWT7o7NO/AFolPQAAjEBoZu4/APjpPAAAAABmZu6/AFolPQ5ZBEDq7NM/AFolPfKmE0Dq7NM/AFolPQ5ZBEDo7NO/AFolPfEzhUDq7NM/AFolPfKmE0Do7NO/AFolPQAAjEB04+y/AFolPfEzhUDo7NO/AFolvfEzhUDo7NO/AFolvQAAjEBoZu4/AFolvfEzhUDq7NM/AFolvfKmE0Dq7NM/AFolvfKmE0Do7NO/AFolvQ5ZBEDo7NO/AFolvQ5ZBEDq7NM/AFolvdiBWT7o7NO/AFolvdiBWT7q7NM/AFolvQAAAABoZu4/AFolvfKmE0Do7NO/AFolPfKmE0Dq7NM/AFolvfKmE0Dq7NM/AFolPfKmE0Do7NO/AFolvQ5ZBEDq7NM/AFolPQ5ZBEDo7NO/AFolvQ5ZBEDo7NO/AFolPQ5ZBEDq7NM/AFolvfEzhUDo7NO/AFolPfKmE0Do7NO/AFolvfKmE0Do7NO/AFolPfEzhUDo7NO/AFolvdiBWT7q7NM/AFolPQ5ZBEDq7NM/AFolvQ5ZBEDq7NM/AFolPdiBWT7q7NM/AFolPQAAjEBoZu4/AFolvQAAjEBoZu4/AFolPQAAjEB04+y/AFolPQAAAABoZu4/AFolvQAAjEBoZu4/AFolPQAAjEBoZu4/AFolvQAAAABoZu4/AFolPQAAAABoZu4/APjpPAAAAABmZu6/AFolvQAAAABoZu4/AFolvfKmE0Dq7NM/AFolPfEzhUDq7NM/AFolvfEzhUDq7NM/AFolPfKmE0Dq7NM/AFolvfEzhUDq7NM/AFolPfEzhUDo7NO/AFolvfEzhUDo7NO/AFolPfEzhUDq7NM/AFolvQ5ZBEDo7NO/AFolPdiBWT7o7NO/AFolvdiBWT7o7NO/AFolPQ5ZBEDo7NO/AFolvdiBWT7o7NO/AFolPdiBWT7q7NM/AFolvdiBWT7q7NM/AFolPdiBWT7o7NO/APjpPA5ZBEBmZu6/APjpvNiBWT5mZu6/APjpPNiBWT5mZu6/APjpvAAAAABmZu6/APjpvA5ZBEBmZu6/APjpPPKmE0BmZu6/APjpvPKmE0BmZu6/APjpPPEzhUBmZu6/APjpvPEzhUBmZu6/APjpPAAAjEBmZu6/APjpvAAAjEBmZu6/AFolPQAAAADq7NM/AFolPdiBWT5oZu4/AFolPQ5ZBEBoZu4/AFolPQAAAADo7NO/AFolPQAAAAB04+y/AFolPdiBWT504+y/AFolPfKmE0BoZu4/AFolPQ5ZBEB04+y/AFolPfEzhUBoZu4/AFolPfKmE0B04+y/AFolPQAAjEDq7NM/AFolPfEzhUB04+y/AFolPQAAjEDo7NO/AFolPQAAjEB04+y/AFolvQ5ZBEB04+y/AFolvfKmE0B04+y/AFolvdiBWT504+y/AFolvfEzhUB04+y/AFolvQAAAAB04+y/AFolvQAAAADo7NO/AFolvQAAAADq7NM/AFolvdiBWT5oZu4/AFolvQ5ZBEBoZu4/AFolvfKmE0BoZu4/AFolvfEzhUBoZu4/AFolvQAAjEDq7NM/AFolvQAAjEDo7NO/AFolvQAAjEB04+y/AFolvQAAjEDq7NM/AFolPQAAjEDq7NM/AFolvQAAjEDo7NO/AFolPQAAjEDo7NO/APjpvAAAjEBmZu6/AFolvQAAjEB04+y/APjpPAAAjEBmZu6/AFolPdiBWT5oZu4/AFolvQ5ZBEBoZu4/AFolPQ5ZBEBoZu4/AFolvfKmE0BoZu4/AFolvdiBWT5oZu4/AFolPfKmE0BoZu4/AFolvfEzhUBoZu4/AFolPfEzhUBoZu4/AFolPQAAAADq7NM/AFolvQAAAADq7NM/AFolPQAAAADo7NO/AFolvQAAAADo7NO/AFolPQAAAAB04+y/APjpvAAAAABmZu6/AFolvQAAAAB04+y/AFolPfKmE0B04+y/APjpPA5ZBEBmZu6/AFolPQ5ZBEB04+y/APjpPNiBWT5mZu6/APjpPPKmE0BmZu6/AFolPdiBWT504+y/APjpPAAAAABmZu6/AFolPQAAAAB04+y/AFolPfEzhUB04+y/APjpPPEzhUBmZu6/APjpPAAAjEBmZu6/APjpvPKmE0BmZu6/AFolvQ5ZBEB04+y/APjpvA5ZBEBmZu6/AFolvdiBWT504+y/AFolvfKmE0B04+y/APjpvNiBWT5mZu6/AFolvQAAAAB04+y/APjpvAAAAABmZu6/APjpvPEzhUBmZu6/AFolvfEzhUB04+y/APjpvAAAjEBmZu6/AFolvQAAjEB04+y/////f////7////9/////v////3////+/////f////7//////////v////3////+/////f////7////9/////v////3////+/////f////7////+/////v////3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////7//f///////v/9///////+//3///////7//f///////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//3//f////z//f/9/////P/9//3////8//3//f////z//////////v/////////+//////////7//////////v/9///////+//3///////7//f///////v/9//3////8//3//f////z//f/9/////P/9//3////8//38AAP///7//fwAA////v/9/AAD///+//////////7//////////v/////////+//////////7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9//3////8//3//f////z//f/9/////P/9//3////8//3///////7//f///////v/9///////+//3///////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+/////f////7////9/////v////3////+/////f////7////9/////v////3////+/////f////7////9/////v////3////+/////f////7////9/////v////3////+/////f////7////9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////7//f///////v/9///////+//3///////7//f///////v/9///////+//3///////7//f///////v/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v////7////+/////v////7////+/////v////7////+/////v////7////+/////v////7////+/////v////7////+/////v////7////+/////v////78AAP+/////vwAA/7////+/AAD/v////78AAP+/////vwAA/7////+/AAD/v////78AAP+/////vwAA/7////+/AAD/v////78AAP+/////vwAA/7////+/AAD/v////78=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_et45k")

[sub_resource type="ArrayMesh" id="ArrayMesh_t3jm8"]
_surfaces = [{
"aabb": AABB(-0.00591755, 0.212409, -1.65567, 0.0118365, 3.95018, 3.31133),
"format": 34359742465,
"index_count": 24,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0A"),
"name": "glass",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray("AOjBu/KmE0Dq7NM/AOjBu/EzhUDo7NO/AOjBu/KmE0Do7NO/AOjBu/EzhUDq7NM/APTBO/KmE0Do7NO/APTBO/EzhUDq7NM/APTBO/KmE0Dq7NM/APTBO/EzhUDo7NO/AOjBu+CBWT7q7NM/AOjBuw5ZBEDo7NO/AOjBu+CBWT7o7NO/AOjBuw5ZBEDq7NM/APTBO+CBWT7o7NO/APTBOw5ZBEDq7NM/APTBO+CBWT7q7NM/APTBOw5ZBEDo7NO/")
}, {
"aabb": AABB(-0.040369, 0, -1.8625, 0.0807381, 4.375, 3.725),
"format": 34359742465,
"index_count": 372,
"index_data": PackedByteArray("GAAZABoAGgAbABgAGQALABoAGgALABsACwAZABwAGAAdABkAEwAZAB0AHAAZABMAEwAdAB4AHAATAB4ACwAcAB8AHwAbAAsAHwAcACAAHwACABsAHAAeAAMAIAAcAAMAHwAgACEAIQACAB8AIQAgAAYAIQAGAAAAIgAGACAAAAAGACIAIgAgAAUAIAADAAUAAAAiACMAIwAhAAAAIwAiACQABQAkACIAIwABACEAAwABAAUAIQABAAIAAwACAAEACgACAAMACgADAB4AAQAjACUAIwAkACUABQABAAQAAQAlAAQABQAHACQABQAEAAcAJQAkACYAJgAkAAcAJwAEACUAJQAmACcAJwAJAAQABwAEAAgACAAEAAkABwAIAAoAJgAHABAACgAQAAcACgAIAAIACAAbAAIAJwAmACgAEAAoACYAJwAoACkACQAnACkACAAqABsAKgAYABsAKgAIAAwACAAJAAwAKgArABgAKwAdABgAKwAqACwAKgAMACwAKwAtAB0ALQAeAB0AKwAsAC4ALgAtACsALQAvAB4ACgAeAC8ALgAwAC0ALwAtADAALwANAAoADQAMAAkALwAwADEALwAxAA0ACgANABAADQAJABAAEQAMAA0AEQANADEAEAAJAA4ACQApAA4AMgAxADAAMwAwAC4AMwAyADAANAAzAC4ANAAuACwANQAyADMAMwA0ABQAMwAUADUADwA0ACwADwAsAAwADwAUADQAEQAPAAwAFAA2ADUANQA2ADIAMgA3ADEANwAyADYAEQAxADcANwA2ABIAEQA3ABIANgA4ABIAEQASADgAFAA4ADYAFwAPABEAFwARADgADwA5ABQAOAAUADkADgA5AA8AFwAOAA8AOgA4ADkADgA6ADkAOgA7ADgAFwA4ADsAEAAOABcAEAAXACgAFgA6AA4AFgA7ADoAFgAOACkAFQAXADsAFgAVADsAFQAoABcAKQAVABYAKQAoABUA"),
"lods": [0.00961683, PackedByteArray("AAABAAIAAwACAAEAAQAAAAQAAwABAAUABQABAAQABgADAAUABQAEAAcABQAHAAYABwAEAAgAAAAJAAQACAAEAAkACgACAAMABwAIAAoACgAIAAIACAALAAIAAAACAAsACAAJAAwACwAIAAwADQAMAAkACwAGAAAACQAAAA4ADwALAAwADQAJABAAEAAJAA4ABgAHABAACgAQAAcACgANABAAEQAMAA0AEQAPAAwAEgANAAoAEQANABIACgATABIACgADABMABgATAAMACwATAAYAFAATAAsAFAASABMADwAUAAsAEQASABUAFAAVABIAEAAVAAYAAAAGABUAAAAVABYAFgAVABQAFgAOAAAADgAWABQADgAUAA8AEAAOABcAEAAXABUAFwAOAA8AFwARABUAFwAPABEA")],
"name": "shiny_metal",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 60,
"vertex_data": PackedByteArray("AFolPQAAjEBoZu6/AFolPfEzhUDo7NO/AFolPfEzhUDo7NM/AFolvfEzhUDo7NM/AFolPfKmE0Do7NO/AFolvfEzhUDo7NO/AFolvQAAjEBoZu6/AFolvfKmE0Do7NO/AFolPfKmE0Do7NM/AFolPQ5ZBEDo7NO/AFolvfKmE0Do7NM/AFolPQAAjEB24+w/AFolPQ5ZBEDo7NM/AFolvQ5ZBEDo7NM/AFolPdiBWT7o7NO/AFolPdiBWT7o7NM/AFolvQ5ZBEDo7NO/AFolvdiBWT7o7NM/AFolvQAAAAB24+w/AFolvQAAjEB24+w/AFolPQAAAAB24+w/AFolvQAAAABoZu6/AFolPQAAAABoZu6/AFolvdiBWT7o7NO/APjpPPEzhUBoZu4/APjpvAAAjEBoZu4/APjpPAAAjEBoZu4/AFolPfEzhUB24+w/AFolvQAAjEDo7NM/APjpvPEzhUBoZu4/AFolvfEzhUB24+w/AFolPQAAjEDo7NM/AFolvQAAjEDo7NO/AFolPQAAjEDo7NO/AFolvfEzhUBoZu6/AFolPfEzhUBoZu6/AFolvfKmE0BoZu6/AFolPfKmE0BoZu6/AFolvQ5ZBEBoZu6/AFolPQ5ZBEBoZu6/AFolvdiBWT5oZu6/AFolPdiBWT5oZu6/AFolPfKmE0B24+w/APjpPPKmE0BoZu4/AFolPQ5ZBEB24+w/APjpvPKmE0BoZu4/APjpPA5ZBEBoZu4/AFolvfKmE0B24+w/APjpvA5ZBEBoZu4/AFolvQ5ZBEB24+w/APjpvNiBWT5oZu4/APjpPNiBWT5oZu4/AFolPdiBWT524+w/APjpPAAAAABoZu4/APjpvAAAAABoZu4/AFolvdiBWT524+w/AFolvQAAAADo7NM/AFolPQAAAADo7NM/AFolPQAAAADo7NO/AFolvQAAAADo7NO/")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_ug1y8"]
resource_name = "supermarket_models_Plane_020"
_surfaces = [{
"aabb": AABB(-0.00591755, 0.212409, -1.65567, 0.0118365, 3.95018, 3.31133),
"attribute_data": PackedByteArray("AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8="),
"format": 34359742487,
"index_count": 24,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0A"),
"material": SubResource("StandardMaterial3D_l51ke"),
"name": "glass",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray("AOjBu/KmE0Dq7NM/AOjBu/EzhUDo7NO/AOjBu/KmE0Do7NO/AOjBu/EzhUDq7NM/APTBO/KmE0Do7NO/APTBO/EzhUDq7NM/APTBO/KmE0Dq7NM/APTBO/EzhUDo7NO/AOjBu+CBWT7q7NM/AOjBuw5ZBEDo7NO/AOjBu+CBWT7o7NO/AOjBuw5ZBEDq7NM/APTBO+CBWT7o7NO/APTBOw5ZBEDq7NM/APTBO+CBWT7q7NM/APTBOw5ZBEDo7NO/////f////7////9/////v////3////+/////f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////v////3////+/////f////7////9/////v////3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78=")
}, {
"aabb": AABB(-0.040369, 0, -1.8625, 0.0807381, 4.375, 3.725),
"attribute_data": PackedByteArray("AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8="),
"format": 34359742487,
"index_count": 372,
"index_data": PackedByteArray("SABJAEoASABLAEkATABLAEgATABNAEsATgBNAEwATgBPAE0AUABPAE4AUABRAE8AUgBRAFAAUgBTAFEAVAACAFUAVQACAFYAVQBWAAsAVAABAAIABQBWAAIAVwABAFQAVwBUAAAAAQBXAFgAAQBYAAMABQBZAFYAWgADAFgAWQAFAAcAWQAHAFsABQADAAQAWgAEAAMABQAEAAcABABaAFwACgBbAAcACgBdAFsACgAJAF0ACgBeAAkABABcAAYABgBeAAoACAAGAFwABgBfAF4ACABfAAYAEAARABIAEAATABEAFAAVABYAFAAXABUAIAAiAGAAIgBhAGAAIABiACIAIgAjAGEAIwAeAGEAIwBjAB4AIwBkAGMAIwAhAGQAHwAiAGIAZQBkACEAHwBiAGYAZQAhAB0AHQAhAB8AHQBnAGUAZgAbAB8AHQAfABsAZgBoABsAGgAbAGgAHQAZAGcAGgBoAGkAaQBqABoAagAZABoAaQAYAGoAagBrABkAawBnABkAawAcAGcAJAAlACYAJAAnACUAKAApACoAKAArACkAMABsAG0AMAAxAGwAbQBsAG4AbQBuAG8AbgAyAG8AMgBuAHAAcABuADMAMgBwAHEALAByAHMALAAvAHIAcwByAHQAcwB0AHUAdQB0AHYAdQB2AHcAdwB2AHgAdwB4AHkAeQB4AC0AeQAtAC4AegB7AHwAfAB7ADUAfAA1ADYAegB9AHsANAB9AHoANAB+AH0AfQB+ADcAfgA0AH8AOAA5ADoAOAA7ADkAPAA9AD4APAA/AD0AQABBAEIAQABDAEEARABFAEYARABHAEUAgACBAIIAgAAPAIEAgwCCAIEAgwCEAIIAhACDAIUAhACFAIYAhwCGAIUAhwCIAIYAiACHAAwAiAAMAIkADgCKAIsADgCMAIoAjQCLAIoAjQCOAIsAjgCNAI8AjgCPAJAAkQCQAI8AkQCSAJAAkgCRAJMAkgCTAA0A"),
"lods": [0.00961683, PackedByteArray("AAABAAIAAQAAAAMAAAAEAAMABQADAAQABAAAAAYABQAEAAcACAAGAAAABgAIAAkABgAJAAoAAAACAAsABQALAAIACwAFAAcACgAJAAsACgALAAcADAANAA4ADAAOAA8AEAARABIAEAATABEAFAAVABYAFAAXABUAGAAZABoAGgAbABgAGAAcABkAHQAZABwAHQAcAB4AGAAbAB8AHQAfABsAHwAgABgAHQAhAB8AHgAhAB0AHwAiACAAIwAhAB4AIgAjACAAIwAeACAAJAAlACYAJAAnACUAKAApACoAKAArACkALAAtAC4ALAAvAC0AMAAxADIAMgAxADMANAA1ADYANAA3ADUAOAA5ADoAOAA7ADkAPAA9AD4APAA/AD0AQABBAEIAQABDAEEARABFAEYARABHAEUA")],
"material": SubResource("StandardMaterial3D_s2ip1"),
"name": "shiny_metal",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 148,
"vertex_data": PackedByteArray("AFolPQAAjEBoZu6/AFolPfEzhUDo7NO/AFolPfEzhUDo7NM/AFolPfKmE0Do7NO/AFolPQ5ZBEDo7NO/AFolPfKmE0Do7NM/AFolPdiBWT7o7NO/AFolPQ5ZBEDo7NM/AFolPQAAAABoZu6/AFolPQAAAAB24+w/AFolPdiBWT7o7NM/AFolPQAAjEB24+w/AFolPQAAAAB24+w/AFolvQAAAAB24+w/AFolvQAAjEB24+w/AFolPQAAjEB24+w/AFolvQ5ZBEDo7NM/AFolPQ5ZBEDo7NO/AFolvQ5ZBEDo7NO/AFolPQ5ZBEDo7NM/AFolvfKmE0Do7NO/AFolPfKmE0Do7NM/AFolvfKmE0Do7NM/AFolPfKmE0Do7NO/AFolvQAAjEBoZu6/AFolvfEzhUDo7NM/AFolvfEzhUDo7NO/AFolvfKmE0Do7NO/AFolvQAAjEB24+w/AFolvfKmE0Do7NM/AFolvQAAAAB24+w/AFolvQ5ZBEDo7NO/AFolvQAAAABoZu6/AFolvQ5ZBEDo7NM/AFolvdiBWT7o7NO/AFolvdiBWT7o7NM/AFolvdiBWT7o7NM/AFolPQ5ZBEDo7NM/AFolvQ5ZBEDo7NM/AFolPdiBWT7o7NM/AFolvfEzhUDo7NO/AFolPfKmE0Do7NO/AFolvfKmE0Do7NO/AFolPfEzhUDo7NO/AFolPQAAjEBoZu6/AFolvQAAAABoZu6/AFolPQAAAABoZu6/AFolvQAAjEBoZu6/AFolPQAAAABoZu6/AFolvQAAAABoZu6/AFolPQAAAAB24+w/AFolvQAAAAB24+w/AFolPQAAjEB24+w/AFolvQAAjEBoZu6/AFolPQAAjEBoZu6/AFolvQAAjEB24+w/AFolvQ5ZBEDo7NO/AFolPdiBWT7o7NO/AFolvdiBWT7o7NO/AFolPQ5ZBEDo7NO/AFolvdiBWT7o7NO/AFolPdiBWT7o7NM/AFolvdiBWT7o7NM/AFolPdiBWT7o7NO/AFolvfKmE0Do7NM/AFolPfEzhUDo7NM/AFolvfEzhUDo7NM/AFolPfKmE0Do7NM/AFolvfEzhUDo7NM/AFolPfEzhUDo7NO/AFolvfEzhUDo7NO/AFolPfEzhUDo7NM/APjpPPEzhUBoZu4/APjpvAAAjEBoZu4/APjpPAAAjEBoZu4/APjpvPEzhUBoZu4/APjpPPKmE0BoZu4/APjpvPKmE0BoZu4/APjpPA5ZBEBoZu4/APjpvA5ZBEBoZu4/APjpPNiBWT5oZu4/APjpvNiBWT5oZu4/APjpPAAAAABoZu4/APjpvAAAAABoZu4/AFolPQAAjEDo7NO/AFolPQAAjEDo7NM/AFolPfEzhUB24+w/AFolPfEzhUBoZu6/AFolPfKmE0BoZu6/AFolPfKmE0B24+w/AFolPQ5ZBEBoZu6/AFolPQ5ZBEB24+w/AFolPdiBWT5oZu6/AFolPdiBWT524+w/AFolPQAAAADo7NM/AFolPQAAAADo7NO/AFolvQAAAADo7NO/AFolvQAAAADo7NM/AFolvdiBWT5oZu6/AFolvdiBWT524+w/AFolvQ5ZBEB24+w/AFolvfKmE0B24+w/AFolvQ5ZBEBoZu6/AFolvfEzhUB24+w/AFolvfKmE0BoZu6/AFolvfEzhUBoZu6/AFolvQAAjEDo7NO/AFolvQAAjEDo7NM/AFolvQAAAADo7NO/AFolPQAAAADo7NO/AFolvQAAAADo7NM/AFolPQAAAADo7NM/APjpvAAAAABoZu4/APjpPAAAAABoZu4/AFolvfEzhUBoZu6/AFolPfEzhUBoZu6/AFolvfKmE0BoZu6/AFolPfKmE0BoZu6/AFolvQ5ZBEBoZu6/AFolPQ5ZBEBoZu6/AFolvdiBWT5oZu6/AFolPdiBWT5oZu6/AFolPQAAjEDo7NM/AFolvQAAjEDo7NO/AFolPQAAjEDo7NO/AFolvQAAjEDo7NM/APjpvAAAjEBoZu4/APjpPAAAjEBoZu4/APjpPAAAjEBoZu4/AFolPfEzhUB24+w/APjpPPEzhUBoZu4/AFolPfKmE0B24+w/APjpPPKmE0BoZu4/AFolPQ5ZBEB24+w/APjpPA5ZBEBoZu4/AFolPdiBWT524+w/APjpPNiBWT5oZu4/APjpPAAAAABoZu4/APjpvPEzhUBoZu4/AFolvfEzhUB24+w/APjpvAAAjEBoZu4/APjpvPKmE0BoZu4/AFolvfKmE0B24+w/APjpvA5ZBEBoZu4/AFolvQ5ZBEB24+w/APjpvNiBWT5oZu4/AFolvdiBWT524+w/APjpvAAAAABoZu4/////f////7////9/////v////3////+/////f////7////9/////v////3////+/////f////7////9/////v////3////+/////f////7////9/////v////3////+//7//f////z//P/9/////P/8//3////8//7//f////z//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9///////+//3///////7//f///////v/9///////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+//////////7//////////v/////////+//////////7//f/9/////P/9//3////8//3//f////z//f/9/////P/////////+//////////7//////////v/////////+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//f///////v/9///////+//3///////7//f///////v/9//3////8//3//f////z//f/9/////P/9//3////8//3///////7//f///////v/9///////+//3///////7//////////v/////////+//////////7//////////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8/////f////7////9/////v////3////+/////f////7////9/////v////3////+/////f////7////9/////v////3////+/////f////7////9/////v////3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/9///////+//3///////7//f///////v/9///////+//3///////7//f///////v/+//3////8//7//f////z//v/9/////P/+//3////8//7//f////z//v/9/////P/+//3////8//7//f////z//v/9/////P/+//3////8//z//f////z//P/9/////P/8//3////8//z//f////z//P/9/////P/8//3////8//z//f////z//P/9/////P/8//3////8//z//f////z8=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_t3jm8")

[sub_resource type="BoxShape3D" id="BoxShape3D_furmh"]
size = Vector3(5, 4.34336, 7)

[node name="door" type="Node3D"]
script = ExtResource("1_vkyci")

[node name="SlidingDoor1" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.85)
mesh = SubResource("ArrayMesh_pm04c")
skeleton = NodePath("")

[node name="SlidingDoor2" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.875)
mesh = SubResource("ArrayMesh_ug1y8")
skeleton = NodePath("")

[node name="Area3D_front" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 18
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D_front"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.47648, 2.14849, -0.0117188)
shape = SubResource("BoxShape3D_furmh")

[node name="Area3D_back" type="Area3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.0977821, 0, 0)
collision_layer = 8
collision_mask = 18
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D_back"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.47648, 2.14849, -0.0117188)
shape = SubResource("BoxShape3D_furmh")

[connection signal="body_entered" from="Area3D_front" to="." method="_on_area_3d_front_body_entered"]
[connection signal="body_exited" from="Area3D_front" to="." method="_on_area_3d_front_body_exited"]
[connection signal="body_entered" from="Area3D_back" to="." method="_on_area_3d_back_body_entered"]
[connection signal="body_exited" from="Area3D_back" to="." method="_on_area_3d_back_body_exited"]
